--- a/report/report.tex
+++ b/report/report.tex
@@ -1,3 +1,4 @@
+
 \documentclass[tikz,10pt,fleqn]{article}
 \usepackage{amsmath}
 \usepackage{algorithm}
@@ -20,7 +21,7 @@
 
 \title{\textbf{Software Analytics\\Bug Triaging}}
 
-\author{Joy Albertini, Jacob Salvi, Adam Kasperski, Anuj Kumar}
+\author{Joy Albertini, Jacob Salvi,Adam Kasperski,Anuj Kumar}
 \date{}
 
 
@@ -69,12 +70,10 @@ All text was converted to lowercase, and contractions were expanded to standardi
 The text was then tokenized, punctuation was removed from tokens, with the exception of keeping the octothorpe in the word 'C\#' and 'F\#', since these are programming language names, and module names. Tokens longer than 40 characters were excluded. We removed common English stopwords and lemmatized the remaining words to their base forms.  
 We used lemmatization as we thought that reducing the word to its base form instead of stemming it would preserve more semantic meaning and yield better results in subsequent steps.
 
-
-
 \section*{Predictor}
 Even though we kept seven columns during preprocessing we actually used only four for training. These four are the 'title', 'body', 'labels' and 'assignee'.\\
 The reasoning behind using the 'title' and 'body' is pretty straightforward, these two columns contain the most information about the issue and are thus of the utter most importance. \\
-We need to pass the 'assignee' in order to predict future assignees, we only used the assignee 'id' since it being a number didn't require any particular encoding for the training and could easily be mapped back to an assignee name.\newpage
+We need to pass the 'assignee' in order to predict future assignees, we only used the assignee 'id' since it being a number didn't require any particular encoding for the training and could easily be mapped back to an assignee name.
 After a few attempts, interleaved with improvement of the preprocessing, we decided to include the issues labels in the corpus used to train the model. Our reasoning is based on the fact that an user is likely to work on similar issues, and therefore be assigned issues with similar labels.\\
 That said, particularly new issues might not have had any label assigned to them yet.\\
 In the first iteration we made use of logistic regression for the bug classification which led to an accuracy of 30\% . Upon further reading we realized that logistic regression struggles with high dimensional embeddings provided by Roberta further it also does not handle well overlapping boundaries like assignees solving similar bugs and leads to incorrect classification. These aspects limited the improvements that could be made to improve accuracy.\\
